hphp/hack/test/enum_class_label/typing/enum_class_sugar_member_selection.php.exp
File "enum_class_sugar_member_selection.php", line 25, characters 12-13:
Unknown constant B in E (Typing[4394])
